--- a/paper/0000-CadyThesis-Draft/ThesisProject.bib
+++ b/paper/0000-CadyThesis-Draft/ThesisProject.bib
@@ -774,6 +774,20 @@
   file = {/home/pccady/Zotero/storage/Q5GCKUZY/Hedderich et al. - 2021 - A Survey on Recent Approaches for Natural Language Processing in Low-Resource Scenarios.pdf}
 }
 
+@inproceedings{hoContrastiveLearningAdversarial2020,
+  title = {Contrastive {{Learning}} with {{Adversarial Examples}}},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Ho, Chih-Hui and Nvasconcelos, Nuno},
+  date = {2020},
+  volume = {33},
+  pages = {17081--17093},
+  publisher = {Curran Associates, Inc.},
+  url = {https://proceedings.neurips.cc/paper/2020/hash/c68c9c8258ea7d85472dd6fd0015f047-Abstract.html},
+  urldate = {2025-09-18},
+  abstract = {Contrastive learning (CL) is a popular technique for self-supervised learning (SSL) of visual representations. It uses pairs of augmentations of unlabeled training examples to define a classification task for pretext learning of a deep embedding. Despite extensive works in augmentation procedures, prior works do not address the selection of challenging negative pairs, as images within a sampled batch are treated independently. This paper addresses the problem, by introducing a new family of adversarial examples for constrastive learning and using these examples to define a new adversarial training algorithm for SSL, denoted as CLAE. When compared to standard CL, the use of adversarial examples creates more challenging positive pairs and adversarial training produces harder negative pairs by accounting for all images in a batch during the optimization. CLAE is compatible with many CL methods in the literature. Experiments show that it improves the performance of several existing CL baselines on multiple datasets.},
+  file = {/home/pccady/Zotero/storage/3KD3FS7V/Ho and Nvasconcelos - 2020 - Contrastive Learning with Adversarial Examples.pdf}
+}
+
 @article{holmbergDesigningAddedPedagogical,
   title = {Designing for Added Pedagogical Value},
   author = {Holmberg, Jörgen},
