--- a/paper/0000-CadyThesis-Draft/main.tex
+++ b/paper/0000-CadyThesis-Draft/main.tex
@@ -241,7 +241,9 @@ To realize the often untapped potential of \gls{capt} and lay the groundwork for
 
 Approaches to segmental recognition for \gls{md} can be broadly divided into two approaches: those which align speech signals to canonical segment sequences, and those which first extract segments---generally phonemes or phones---from speech, then aligning the extracted sequence of segments to a canonical sequence for comparison \parencite{korzekwaComputerassistedPronunciationTraining2022}. The process of aligning speech to text which characterizes the former approach is termed \textit{forced-alignment} and thus approaches to segment recognition with that focus are likewise termed forced-alignment approaches. Classic pronunciation scoring generally focused on these forced-alignment approaches, which typically relied on log-likelihood scores and log-posterior scores derived from \gls{hmm}-based \gls{asr} model outputs \parencite{wittAutomaticErrorDetection}. The latter of these scores soon became the de facto standard due to its higher correlation with human assessments. Building further on this development, \textcite{witt2000use} introduced the widely used \gls{gop} measure of pronunciation quality, which could be compared against a threshold value to determine how well the speaker's pronunciation matches the canonical model pronunciation \parencite{witt2014computer}. Although \gls{gop} and other posterior-based scores continue to be used for \gls{md} with modern \gls{asr} architectures \parencite[inter alia]{parikhEvaluatingLogitBasedGOP2025,gongTransformerBasedMultiAspectMultiGranularity2022}, with the recent advent of transformer-based \gls{e2e} models, researchers have also pursued sequence alignment as an alternative to circumvent the need for phone-level forced-alignment of speech signals to reference transcriptions \parencite{loEffectiveEndtoEndModeling2020,leungCNNRNNCTCBasedEndtoend2019}. 
 
-To detect mispronunciations at the segmental, we confine ourselves to the latter family of approaches outlined above: obtaining phones as an intermediate step before comparing to canonical strings. Detection of articulatorily meaningful units of speech could lay the ground for more informative feedback in any future \gls{capt} extension, particularly in comparison to binary assessment strategies of simply identifying correct or incorrect pronunciation, but this focus introduces its own set of challenges. Recognizing phones requires fine-grained annotations at that level, which are difficult to obtain, particularly for \gls{l2} speech \parencite{zhangL2GENNeuralPhoneme2022}. This framing of the \gls{md} problem is a data-scarce task to pursue, but the modern innovations in \gls{asr} architectures leveraging the aforementioned pre-training/fine-tuning paradigm could make it an increasingly feasible one, even for low-resource languages.
+To detect mispronunciations at the segmental level, we confine ourselves to the latter family of approaches outlined above: obtaining phones as an intermediate step before comparing to canonical strings. Applying \gls{gop} directly to \gls{ctc} models carries a number of caveats which will be explained in the following chapter\ref{ch:rw} Detection of articulatorily meaningful units of speech could lay the ground for more informative feedback in any future \gls{capt} extension, particularly in comparison to binary assessment strategies of simply identifying correct or incorrect pronunciation, but this focus introduces its own set of challenges. Recognizing phones requires fine-grained annotations at that level, which are difficult to obtain, particularly for \gls{l2} speech \parencite{zhangL2GENNeuralPhoneme2022}. This framing of the \gls{md} problem is a data-scarce task to pursue, but the modern innovations in \gls{asr} architectures leveraging the aforementioned pre-training/fine-tuning paradigm could make it an increasingly feasible one, even for low-resource languages.
+
+\parencite{caoSegmentationfreeGoodnessPronunciation2025} good explanation of challenges in applying vanilla gop to asr models
 
 "With deep neural networks (DNNs), GOP is derived from posterior probabilities using the negative log of the mean softmax output over aligned frames" \parencite{parikhEvaluatingLogitBasedGOP2025}
 
@@ -270,7 +272,7 @@ Following the rise of Transformers in \gls{ml} generally, transformer-based \gls
 The ability to pre-train on freely available unlabeled data makes Wav2Vec 2.0 a natural choice for low-resource scenarios where one cannot count on abundant labeled data to train a model from the ground up. By leveraging the benefits afforded by the pre-training/fine-tuning paradigm, we can make the most of data limited both by domain and language. \todo{not done, probably unnecessary.}
 \textcite{baevskiEffectivenessSelfsupervisedPretraining2020} self supervision enabling ASR at low cost
 
-\chapter{Related Work}
+\chapter{Related Work}\label{ch:rw}
 In the following section, we will dive into some existing strategies for overcoming the data scarcity problem in \gls{md}, which can be broadly split into two groups: attempts to eliminated dependency on the scarce \gls{l2} data entirely, or through generating the desired \gls{l2} data through various synthesis or augmenting techniques \todo{see l2gen for some of the papers supporting this split}. We will start with recent applications of \gls{e2e} \gls{asr} in \gls{md} before exploring the specific ways the current work pursues overcoming data scarcity in relation to these two overarching strategies, specifically through: 
 \begin{enumerate}
   \item \gls{asr} model ensembles,
