working version: Background ASR

--- a/paper/0000-CadyThesis-Draft/ThesisProject.bib
+++ b/paper/0000-CadyThesis-Draft/ThesisProject.bib
@@ -237,6 +237,22 @@
   file = {/home/pccady/Zotero/storage/JSBDMVYY/Bartelds et al. - 2023 - Making More of Little Data Improving Low-Resource Automatic Speech Recognition Using Data Augmentat.pdf;/home/pccady/Zotero/storage/UECVQWGQ/2305.html}
 }
 
+@online{baskarSemisupervisedSequencetosequenceASR2019,
+  title = {Semi-Supervised {{Sequence-to-sequence ASR}} Using {{Unpaired Speech}} and {{Text}}},
+  author = {Baskar, Murali Karthick and Watanabe, Shinji and Astudillo, Ramon and Hori, Takaaki and Burget, Lukáš and Černocký, Jan},
+  date = {2019-08-20},
+  eprint = {1905.01152},
+  eprinttype = {arXiv},
+  eprintclass = {eess},
+  doi = {10.48550/arXiv.1905.01152},
+  url = {http://arxiv.org/abs/1905.01152},
+  urldate = {2025-09-24},
+  abstract = {Sequence-to-sequence automatic speech recognition (ASR) models require large quantities of data to attain high performance. For this reason, there has been a recent surge in interest for unsupervised and semi-supervised training in such models. This work builds upon recent results showing notable improvements in semi-supervised training using cycle-consistency and related techniques. Such techniques derive training procedures and losses able to leverage unpaired speech and/or text data by combining ASR with Text-to-Speech (TTS) models. In particular, this work proposes a new semi-supervised loss combining an end-to-end differentiable ASR\$\textbackslash rightarrow\$TTS loss with TTS\$\textbackslash rightarrow\$ASR loss. The method is able to leverage both unpaired speech and text data to outperform recently proposed related techniques in terms of \textbackslash\%WER. We provide extensive results analyzing the impact of data quantity and speech and text modalities and show consistent gains across WSJ and Librispeech corpora. Our code is provided in ESPnet to reproduce the experiments.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language,Computer Science - Information Retrieval,Computer Science - Machine Learning,Computer Science - Sound,Electrical Engineering and Systems Science - Audio and Speech Processing},
+  file = {/home/pccady/Zotero/storage/UH5UGFWB/Baskar et al. - 2019 - Semi-supervised Sequence-to-sequence ASR using Unpaired Speech and Text.pdf;/home/pccady/Zotero/storage/8YSR83AE/1905.html}
+}
+
 @article{benderAchievingEvaluatingLanguageIndependence2011,
   title = {On {{Achieving}} and {{Evaluating Language-Independence}} in {{NLP}}},
   author = {Bender, Emily M.},
@@ -269,6 +285,12 @@
   abstract = {Speech processing for under-resourced languages is an active field of research, which has experienced significant progress during the past decade. We propose, in this paper, a survey that focuses on automatic speech recognition (ASR) for these languages. The definition of under-resourced languages and the challenges associated to them are first defined. The main part of the paper is a literature review of the recent (last 8 years) contributions made in ASR for under-resourced languages. Examples of past projects and future trends when dealing with under-resourced languages are also presented. We believe that this paper will be a good starting point for anyone interested to initiate research in (or operational development of) ASR for one or several under-resourced languages. It should be clear, however, that many of the issues and approaches presented here, apply to speech technology in general (text-to-speech synthesis for instance).},
   langid = {english},
   file = {/home/pccady/Zotero/storage/AKFY7UJQ/Besacier et al. - 2014 - Automatic speech recognition for under-resourced languages A survey.pdf}
+}
+
+@article{biewaldExperimentTrackingWeights2020,
+  title = {Experiment Tracking with Weights and Biases},
+  author = {family=Biewald, given=Lukas, prefix=and others, useprefix=false},
+  date = {2020}
 }
 
 @inproceedings{birdNLTKNaturalLanguage2006,
@@ -333,6 +355,23 @@
   file = {/home/pccady/Zotero/storage/ULMAZYR4/Broin - New Urban Irish Pidgin, Creole, or Bona Fide Dialect The Phonetics and Morphology of City and Gael.pdf}
 }
 
+@online{calikEnsemblebasedFrameworkMispronunciation2023,
+  title = {An Ensemble-Based Framework for Mispronunciation Detection of {{Arabic}} Phonemes},
+  author = {Calik, Sukru Selim and Kucukmanisa, Ayhan and Kilimci, Zeynep Hilal},
+  date = {2023-01-03},
+  eprint = {2301.01378},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2301.01378},
+  url = {http://arxiv.org/abs/2301.01378},
+  urldate = {2025-09-06},
+  abstract = {Determination of mispronunciations and ensuring feedback to users are maintained by computerassisted language learning (CALL) systems. In this work, we introduce an ensemble model that defines the mispronunciation of Arabic phonemes and assists learning of Arabic, effectively. To the best of our knowledge, this is the very first attempt to determine the mispronunciations of Arabic phonemes employing ensemble learning techniques and conventional machine learning models, comprehensively. In order to observe the effect of feature extraction techniques, melfrequency cepstrum coefficients (MFCC), and Mel spectrogram are blended with each learning algorithm. To show the success of proposed model, 29 letters in the Arabic phonemes, 8 of which are hafiz, are voiced by a total of 11 different person. The amount of data set has been enhanced employing the methods of adding noise, time shifting, time stretching, pitch shifting. Extensive experiment results demonstrate that the utilization of voting classifier as an ensemble algorithm with Mel spectrogram feature extraction technique exhibits remarkable classification result with 95.9\% of accuracy.},
+  langid = {english},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language,Computer Science - Machine Learning,Computer Science - Sound,Electrical Engineering and Systems Science - Audio and Speech Processing},
+  file = {/home/pccady/Zotero/storage/C2HTVNGL/Calik et al. - 2023 - An ensemble-based framework for mispronunciation detection of Arabic phonemes.pdf}
+}
+
 @article{calikEnsemblebasedFrameworkMispronunciation2023a,
   title = {An Ensemble-Based Framework for Mispronunciation Detection of {{Arabic}} Phonemes},
   author = {Calık, Sükrü Selim and Kucukmanisa, Ayhan and Kilimci, Zeynep Hilal},
@@ -347,6 +386,22 @@
   urldate = {2025-09-17},
   langid = {english},
   file = {/home/pccady/Zotero/storage/MH9668SX/main.pdf}
+}
+
+@online{caoSegmentationfreeGoodnessPronunciation2025,
+  title = {Segmentation-Free {{Goodness}} of {{Pronunciation}}},
+  author = {Cao, Xinwei and Fan, Zijian and Svendsen, Torbjørn and Salvi, Giampiero},
+  date = {2025-07-24},
+  eprint = {2507.16838},
+  eprinttype = {arXiv},
+  eprintclass = {eess},
+  doi = {10.48550/arXiv.2507.16838},
+  url = {http://arxiv.org/abs/2507.16838},
+  urldate = {2025-09-19},
+  abstract = {Mispronunciation detection and diagnosis (MDD) is a significant part in modern computer aided language learning (CALL) systems. Within MDD, phoneme-level pronunciation assessment is key to helping L2 learners improve their pronunciation. However, most systems are based on a form of goodness of pronunciation (GOP) which requires pre-segmentation of speech into phonetic units. This limits the accuracy of these methods and the possibility to use modern CTC-based acoustic models for their evaluation. In this study, we first propose self-alignment GOP (GOP-SA) that enables the use of CTC-trained ASR models for MDD. Next, we define a more general alignment-free method that takes all possible alignments of the target phoneme into account (GOP-AF). We give a theoretical account of our definition of GOP-AF, an implementation that solves potential numerical issues as well as a proper normalization which makes the method applicable with acoustic models with different peakiness over time. We provide extensive experimental results on the CMU Kids and Speechocean762 datasets comparing the different definitions of our methods, estimating the dependency of GOP-AF on the peakiness of the acoustic models and on the amount of context around the target phoneme. Finally, we compare our methods with recent studies over the Speechocean762 data showing that the feature vectors derived from the proposed method achieve state-of-the-art results on phoneme-level pronunciation assessment.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Artificial Intelligence,Computer Science - Computation and Language,Electrical Engineering and Systems Science - Audio and Speech Processing},
+  file = {/home/pccady/Zotero/storage/SLFCWCD5/Cao et al. - 2025 - Segmentation-free Goodness of Pronunciation.pdf;/home/pccady/Zotero/storage/KP48LBYX/2507.html}
 }
 
 @book{chasaideABAIRInitiativeBringing2017,
@@ -628,6 +683,22 @@
   file = {/home/pccady/Zotero/storage/7IVVP94K/index.html}
 }
 
+@report{garofoloDARPATIMITAcousticphonetic1993,
+  title = {{{DARPA TIMIT}}: Acoustic-Phonetic Continuous Speech Corpus {{CD-ROM}}, {{NIST}} Speech Disc 1-1.1},
+  shorttitle = {{{DARPA TIMIT}}},
+  author = {Garofolo, John S and Lamel, Lori F and Fisher, William M and Fiscus, Jonathan G and Pallett, David S and Dahlgren, Nancy L},
+  date = {1993},
+  number = {NIST IR 4930},
+  pages = {NIST IR 4930},
+  institution = {{National Institute of Standards and Technology}},
+  location = {Gaithersburg, MD},
+  doi = {10.6028/NIST.IR.4930},
+  url = {https://nvlpubs.nist.gov/nistpubs/Legacy/IR/nistir4930.pdf},
+  urldate = {2025-09-09},
+  langid = {english},
+  file = {/home/pccady/Zotero/storage/LPFU545T/Garofolo et al. - 1993 - DARPA TIMIT acoustic-phonetic continuous speech corpus CD-ROM, NIST speech disc 1-1.1.pdf}
+}
+
 @inproceedings{gaurMixtureInformedExperts2021,
   title = {Mixture of {{Informed Experts}} for {{Multilingual Speech Recognition}}},
   booktitle = {{{ICASSP}} 2021 - 2021 {{IEEE International Conference}} on {{Acoustics}}, {{Speech}} and {{Signal Processing}} ({{ICASSP}})},
@@ -755,6 +826,22 @@
   abstract = {Experiments using the gating paradigm investigated the effects of auditory–visual (AV) and auditoryonly perceptual training on second-language spoken-word identification by Japanese and Korean learners of English. Stimuli were familiar bisyllabic words beginning with /p/, /f/, /ô/, /l/, and /s, t, k/ combined with high, low, and rounded vowels. Results support the priming role of visual cues in AV speech processing. Identification was earlier with visual cues and following training, especially for words beginning with /ô/ and /l/, which also showed significant effects of adjacent vowel. For the Japanese, the AV advantage in identifying /ô/- and /l/-initial words was accentuated following training. Findings are discussed within a multimodal episodic model of learning.},
   langid = {english},
   file = {/home/pccady/Zotero/storage/294NNY9V/Hardison - 2005 - Second-language spoken word identification Effects of perceptual training, visual cues, and phoneti.pdf}
+}
+
+@online{hayashiBackTranslationStyleDataAugmentation2018,
+  title = {Back-{{Translation-Style Data Augmentation}} for {{End-to-End ASR}}},
+  author = {Hayashi, Tomoki and Watanabe, Shinji and Zhang, Yu and Toda, Tomoki and Hori, Takaaki and Astudillo, Ramon and Takeda, Kazuya},
+  date = {2018-07-28},
+  eprint = {1807.10893},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.1807.10893},
+  url = {http://arxiv.org/abs/1807.10893},
+  urldate = {2025-09-24},
+  abstract = {In this paper we propose a novel data augmentation method for attention-based end-to-end automatic speech recognition (E2E-ASR), utilizing a large amount of text which is not paired with speech signals. Inspired by the back-translation technique proposed in the field of machine translation, we build a neural text-to-encoder model which predicts a sequence of hidden states extracted by a pre-trained E2E-ASR encoder from a sequence of characters. By using hidden states as a target instead of acoustic features, it is possible to achieve faster attention learning and reduce computational cost, thanks to sub-sampling in E2E-ASR encoder, also the use of the hidden states can avoid to model speaker dependencies unlike acoustic features. After training, the text-to-encoder model generates the hidden states from a large amount of unpaired text, then E2E-ASR decoder is retrained using the generated hidden states as additional training data. Experimental evaluation using LibriSpeech dataset demonstrates that our proposed method achieves improvement of ASR performance and reduces the number of unknown words without the need for paired data.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language},
+  file = {/home/pccady/Zotero/storage/KKF67FYS/Hayashi et al. - 2018 - Back-Translation-Style Data Augmentation for End-to-End ASR.pdf;/home/pccady/Zotero/storage/B47YNEAY/1807.html}
 }
 
 @online{hedderichSurveyRecentApproaches2021,
@@ -953,6 +1040,23 @@
   file = {/home/pccady/Zotero/storage/U3H5C8P2/ed3book_aug25.pdf}
 }
 
+@inproceedings{khareLowResourceASR2021,
+  title = {Low {{Resource ASR}}: {{The Surprising Effectiveness}} of {{High Resource Transliteration}}},
+  shorttitle = {Low {{Resource ASR}}},
+  booktitle = {Interspeech 2021},
+  author = {Khare, Shreya and Mittal, Ashish and Diwan, Anuj and Sarawagi, Sunita and Jyothi, Preethi and Bharadwaj, Samarth},
+  date = {2021-08-30},
+  pages = {1529--1533},
+  publisher = {ISCA},
+  doi = {10.21437/Interspeech.2021-2062},
+  url = {https://www.isca-archive.org/interspeech_2021/khare21_interspeech.html},
+  urldate = {2025-08-28},
+  abstract = {Cross-lingual transfer of knowledge from high-resource languages to low-resource languages is an important research problem in automatic speech recognition (ASR). We propose a new strategy of transfer learning by pretraining using large amounts of speech in the high-resource language but with its text transliterated to the target low-resource language. This simple mapping of scripts explicitly encourages increased sharing between the output spaces of both languages and is surprisingly effective even when the high-resource and low-resource languages are from unrelated language families. The utility of our proposed technique is more evident in very low-resource scenarios, where better initializations are more beneficial. We evaluate our technique on a transformer ASR architecture and the state-ofthe-art wav2vec2.0 ASR architecture, with English as the highresource language and six languages as low-resource targets. With access to 1 hour of target speech, we obtain relative WER reductions of up to 8.2\% compared to existing transfer-learning approaches.},
+  eventtitle = {Interspeech 2021},
+  langid = {english},
+  file = {/home/pccady/Zotero/storage/Y6S48AQ3/Khare et al. - 2021 - Low Resource ASR The Surprising Effectiveness of High Resource Transliteration.pdf}
+}
+
 @inproceedings{khareLowResourceASR2021a,
   title = {Low {{Resource ASR}}: {{The Surprising Effectiveness}} of {{High Resource Transliteration}}},
   shorttitle = {Low {{Resource ASR}}},
@@ -1058,6 +1162,22 @@
   urldate = {2025-07-18},
   langid = {english},
   file = {/home/pccady/Zotero/storage/QCIRJ73S/Korzekwa et al. - 2022 - Computer-assisted pronunciation training—Speech synthesis is almost all you need.pdf}
+}
+
+@online{korzekwaWeaklysupervisedWordlevelPronunciation2021,
+  title = {Weakly-Supervised Word-Level Pronunciation Error Detection in Non-Native {{English}} Speech},
+  author = {Korzekwa, Daniel and Lorenzo-Trueba, Jaime and Drugman, Thomas and Calamaro, Shira and Kostek, Bozena},
+  date = {2021-06-07},
+  eprint = {2106.03494},
+  eprinttype = {arXiv},
+  eprintclass = {eess},
+  doi = {10.48550/arXiv.2106.03494},
+  url = {http://arxiv.org/abs/2106.03494},
+  urldate = {2025-09-25},
+  abstract = {We propose a weakly-supervised model for word-level mispronunciation detection in non-native (L2) English speech. To train this model, phonetically transcribed L2 speech is not required and we only need to mark mispronounced words. The lack of phonetic transcriptions for L2 speech means that the model has to learn only from a weak signal of word-level mispronunciations. Because of that and due to the limited amount of mispronounced L2 speech, the model is more likely to overfit. To limit this risk, we train it in a multi-task setup. In the first task, we estimate the probabilities of word-level mispronunciation. For the second task, we use a phoneme recognizer trained on phonetically transcribed L1 speech that is easily accessible and can be automatically annotated. Compared to state-of-the-art approaches, we improve the accuracy of detecting word-level pronunciation errors in AUC metric by 30\% on the GUT Isle Corpus of L2 Polish speakers, and by 21.5\% on the Isle Corpus of L2 German and Italian speakers.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Machine Learning,Electrical Engineering and Systems Science - Audio and Speech Processing},
+  file = {/home/pccady/Zotero/storage/83ICW8R2/Korzekwa et al. - 2021 - Weakly-supervised word-level pronunciation error detection in non-native English speech.pdf;/home/pccady/Zotero/storage/6IADSWLV/2106.html}
 }
 
 @book{krashenPrinciplesPracticeSecond1984,
