working render with updates

--- a/paper/0000-CadyThesis-Draft/ThesisProject.bib
+++ b/paper/0000-CadyThesis-Draft/ThesisProject.bib
@@ -372,22 +372,6 @@
   file = {/home/pccady/Zotero/storage/C2HTVNGL/Calik et al. - 2023 - An ensemble-based framework for mispronunciation detection of Arabic phonemes.pdf}
 }
 
-@article{calikEnsemblebasedFrameworkMispronunciation2023a,
-  title = {An Ensemble-Based Framework for Mispronunciation Detection of {{Arabic}} Phonemes},
-  author = {Calık, Sükrü Selim and Kucukmanisa, Ayhan and Kilimci, Zeynep Hilal},
-  date = {2023-09},
-  journaltitle = {Applied Acoustics},
-  shortjournal = {Applied Acoustics},
-  volume = {212},
-  pages = {109593},
-  issn = {0003682X},
-  doi = {10.1016/j.apacoust.2023.109593},
-  url = {https://linkinghub.elsevier.com/retrieve/pii/S0003682X23003912},
-  urldate = {2025-09-17},
-  langid = {english},
-  file = {/home/pccady/Zotero/storage/MH9668SX/main.pdf}
-}
-
 @online{caoSegmentationfreeGoodnessPronunciation2025,
   title = {Segmentation-Free {{Goodness}} of {{Pronunciation}}},
   author = {Cao, Xinwei and Fan, Zijian and Svendsen, Torbjørn and Salvi, Giampiero},
@@ -1113,6 +1097,22 @@
   author = {Kheir, Yassine EL},
   langid = {english},
   file = {/home/pccady/Zotero/storage/AERWL4YF/Kheir - Mispronunciation Detection with SpeechBlender Data Augmentation Pipeline..pdf}
+}
+
+@online{khoslaSupervisedContrastiveLearning2021,
+  title = {Supervised {{Contrastive Learning}}},
+  author = {Khosla, Prannay and Teterwak, Piotr and Wang, Chen and Sarna, Aaron and Tian, Yonglong and Isola, Phillip and Maschinot, Aaron and Liu, Ce and Krishnan, Dilip},
+  date = {2021-03-10},
+  eprint = {2004.11362},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.2004.11362},
+  url = {http://arxiv.org/abs/2004.11362},
+  urldate = {2025-10-02},
+  abstract = {Contrastive learning applied to self-supervised representation learning has seen a resurgence in recent years, leading to state of the art performance in the unsupervised training of deep image models. Modern batch contrastive approaches subsume or significantly outperform traditional contrastive losses such as triplet, max-margin and the N-pairs loss. In this work, we extend the self-supervised batch contrastive approach to the fully-supervised setting, allowing us to effectively leverage label information. Clusters of points belonging to the same class are pulled together in embedding space, while simultaneously pushing apart clusters of samples from different classes. We analyze two possible versions of the supervised contrastive (SupCon) loss, identifying the best-performing formulation of the loss. On ResNet-200, we achieve top-1 accuracy of 81.4\% on the ImageNet dataset, which is 0.8\% above the best number reported for this architecture. We show consistent outperformance over cross-entropy on other datasets and two ResNet variants. The loss shows benefits for robustness to natural corruptions and is more stable to hyperparameter settings such as optimizers and data augmentations. Our loss function is simple to implement, and reference TensorFlow code is released at https://t.ly/supcon.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computer Vision and Pattern Recognition,Computer Science - Machine Learning,Statistics - Machine Learning},
+  file = {/home/pccady/Zotero/storage/V9PYN5KF/Khosla et al. - 2021 - Supervised Contrastive Learning.pdf;/home/pccady/Zotero/storage/VRQLE8VH/2004.html}
 }
 
 @online{kimAutomaticPronunciationAssessment2022,
@@ -2025,6 +2025,23 @@
   eventtitle = {{{INTERSPEECH}} 2023},
   langid = {english},
   file = {/home/pccady/Zotero/storage/SYX7C589/Rouditchenko et al. - 2023 - Comparison of Multilingual Self-Supervised and Weakly-Supervised Speech Pre-Training for Adaptation.pdf}
+}
+
+@online{rozenDiversifyYourDatasets2019,
+  title = {Diversify {{Your Datasets}}: {{Analyzing Generalization}} via {{Controlled Variance}} in {{Adversarial Datasets}}},
+  shorttitle = {Diversify {{Your Datasets}}},
+  author = {Rozen, Ohad and Shwartz, Vered and Aharoni, Roee and Dagan, Ido},
+  date = {2019-10-21},
+  eprint = {1910.09302},
+  eprinttype = {arXiv},
+  eprintclass = {cs},
+  doi = {10.48550/arXiv.1910.09302},
+  url = {http://arxiv.org/abs/1910.09302},
+  urldate = {2025-10-02},
+  abstract = {Phenomenon-specific "adversarial" datasets have been recently designed to perform targeted stress-tests for particular inference types. Recent work (Liu et al., 2019a) proposed that such datasets can be utilized for training NLI and other types of models, often allowing to learn the phenomenon in focus and improve on the challenge dataset, indicating a "blind spot" in the original training data. Yet, although a model can improve in such a training process, it might still be vulnerable to other challenge datasets targeting the same phenomenon but drawn from a different distribution, such as having a different syntactic complexity level. In this work, we extend this method to drive conclusions about a model's ability to learn and generalize a target phenomenon rather than to "learn" a dataset, by controlling additional aspects in the adversarial datasets. We demonstrate our approach on two inference phenomena - dative alternation and numerical reasoning, elaborating, and in some cases contradicting, the results of Liu et al.. Our methodology enables building better challenge datasets for creating more robust models, and may yield better model understanding and subsequent overarching improvements.},
+  pubstate = {prepublished},
+  keywords = {Computer Science - Computation and Language},
+  file = {/home/pccady/Zotero/storage/4YCFNZVL/Rozen et al. - 2019 - Diversify Your Datasets Analyzing Generalization via Controlled Variance in Adversarial Datasets.pdf;/home/pccady/Zotero/storage/HYESMCHB/1910.html}
 }
 
 @article{saitoEffectsSecondLanguage2019,
